# Kube-Sentient-Aegis

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AEGIS_README.md  CHANGELOG.md  CLUSTER_SETUP_COMMANDS.md  COMMANDS_ESSENTIALS.md  CONTRIBUTION.md  LICENSE  Makefile  README.md  REAL_WORLD_TESTING.md  SETUP.md  SHADOW_FIX_REPORT.md  TESTING_GUIDE.md  TESTING_QUICK_REF.md  commit_output.md  pyproject.toml  run-aegis.sh  run_verification_test.sh  vcluster-demo-api-20260203-163747-kubeconfig.yaml  vcluster-demo-api-20260203-184102-kubeconfig.yaml  vcluster-demo-api-20260203-185511-kubeconfig.yaml  vcluster-demo-api-20260203-191126-kubeconfig.yaml  vcluster-demo-api-20260203-191803-kubeconfig.yaml  vcluster-demo-api-20260203-213142-kubeconfig.yaml  vcluster-demo-api-20260204-203433-kubeconfig.yaml  vcluster-demo-api-20260204-203601-kubeconfig.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/agents/: diagnostic-rca-agent.agent.md  remediation-planner-agent.agent.md  verification-agent.agent.md
.github/prompts/: plan-aegisMvpImplementation.prompt.md  plan-shadowLayerObservabilityCompletion.prompt.md
.github/skills/context-prompt-engineering/: SKILL.md
.github/skills/docker-best-practices/: SKILL.md
.github/skills/k8s-diagnostics-k8sgpt/: SKILL.md
.github/skills/k8s-operator-development/: SKILL.md
config/gpu-profiles/: team-gpus.yaml
deploy/docker/: Dockerfile  docker-compose.yaml  kubeconfig-docker.yaml  prometheus.yaml  vcluster-demo-api-20260203-221051-kubeconfig.yaml
deploy/docker/grafana/dashboards/: aegis-overview.json  deployment-dashboard.json
deploy/docker/grafana/provisioning/dashboards/: dashboard-config.yaml
deploy/docker/grafana/provisioning/datasources/: datasources.yaml
deploy/docker/loki/: loki-config.yaml
deploy/docker/prometheus/: prometheus.yaml
deploy/docker/prometheus/rules/: aegis-alerts.yml
deploy/docker/promtail/: promtail-config.yaml
deploy/helm/aegis/: Chart.yaml  values.yaml
deploy/helm/aegis/crds/: incident-crd.yaml
deploy/helm/aegis/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml  shadow-security.yaml
deploy/k8sgpt/: README.md  k8sgpt-cr.yaml  k8sgpt-values.yaml  k8sgpt_handler.py
deploy/minikube/: minikube-config.yaml
deploy/scripts/: setup-k8sgpt.sh  setup-minikube.sh
docs/: AEGIS_TOOLS_CATALOG.md  ANALYSIS_REPORT.md  LLM_MODEL_GUIDE.md  PROJECT_OVERVIEW_AND_WORKFLOW.md  SECURITY_ENGINEER_GUIDE.md  SECURITY_IMPLEMENTATION_REPORT.md  SHADOW_VERIFICATION_FIX_REPORT.md  TESTING_GUIDE.md  TESTING_QUICK_REF.md
docs/architecture/: AEGIS_DESIGN_BLUEPRINT.md  Aegies-Complete-Structure.md  enhanced-sre-system.md
docs/demos/: hackathon-scenarios.md
docs/development/: AUDIT_PLAN.md  CLI_LLM_INTEGRATION_ARCHITECTURE.md  CLI_QUICKSTART.md  DEMO_INFRASTRUCTURE.md  FALCO_IMPLEMENTATION_CONTEXT.md  FALCO_IMPLEMENTATION_SUMMARY.md  FALCO_TEST_REPORT.md  FALCO_USAGE.md  KOPF_OPERATOR_IMPLEMENTATION.md  LINTING_CHECKLIST.md  NO_GPU_QUICK_START.md  SECURITY_LAYER_BASELINE_ANALYSIS.md  SECURITY_LAYER_COPILOT_STATUS.md  SETUP.md  ZAP_USAGE.md
docs/external-features/: RAG-FEAT.md
docs/runbooks/: incident-response.md
examples/cluster/: kind-config.yaml
examples/demo-app/: demo-api.yaml  demo-db.yaml  demo-redis.yaml  demo-worker.yaml  kustomization.yaml  namespaces.yaml
examples/incidents/: crashloop-missing-env.yaml  imagepull-bad-tag.yaml  liveness-failure.yaml  oomkill-memory-leak.yaml  pending-no-resources.yaml  readiness-failure.yaml  service-wrong-selector.yaml
examples/shadow/: vcluster-template.yaml
kind-logs/: docker-info.txt  kind-version.txt
kind-logs/aegis-demo-control-plane/: inspect.json
kind-logs/aegis-demo-worker/: inspect.json
kind-logs/aegis-demo-worker2/: inspect.json
scripts/: demo-setup.sh  diagnose_env.py  generate-docker-kubeconfig.sh  generate-kind-kubeconfig.sh  hadolint-check.sh  quick-start-shadow.sh  test-all.sh  test-shadow-quick.sh  test-shadow-workflow.sh  unleash-beast-mode.sh
src/aegis/: __init__.py  cli.py  observability.py  version.py
src/aegis/agent/: __init__.py  analyzer.py  graph.py  state.py
src/aegis/agent/agents/: __init__.py  rca_agent.py  rollback_agent.py  solution_agent.py  verifier_agent.py
src/aegis/agent/llm/: __init__.py  gemini.py  groq.py  huggingface.py  json_utils.py  ollama.py  router.py
src/aegis/agent/prompts/: __init__.py  rca_prompts.py  rollback_prompts.py  solution_prompts.py  verifier_prompts.py
src/aegis/config/: __init__.py  settings.py
src/aegis/crd/: __init__.py  incident_models.py  k8sgpt_models.py
src/aegis/incident/: __init__.py
src/aegis/k8s_operator/: __init__.py  k8sgpt_handlers.py  main.py
src/aegis/k8s_operator/handlers/: __init__.py  approval.py  approval_cli.py  incident.py  index.py  processor.py  shadow.py
src/aegis/kubernetes/: __init__.py  context.py  fix_applier.py  monitoring.py
src/aegis/observability/: __init__.py  _logging.py  _metrics.py  grafana.py  logging.py  metrics.py  prometheus_client.py
src/aegis/operator/: __init__.py  main.py
src/aegis/security/: __init__.py  falco.py  kubesec.py  pipeline.py  trivy.py  zap.py
src/aegis/shadow/: __init__.py  drift_detector.py  errors.py  manager.py  vcluster.py
src/aegis/testing/: __init__.py
src/aegis/utils/: __init__.py  gpu.py
tests/: conftest.py
tests/benchmarks/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: test_approval_workflow.py  test_workflow.py
tests/unit/: test_approval_handlers.py  test_cli.py  test_drift_detector.py  test_falco.py  test_fix_applier.py  test_gpu.py  test_incident_models.py  test_incident_queue.py  test_logging.py  test_metrics.py  test_monitoring.py  test_ollama.py  test_rollback_agent.py  test_settings.py  test_shadow_manager.py  test_state.py  test_trivy.py  test_zap.py
