[project]
name = "aegis"
version = "0.1.0"
description = "Autonomous SRE Agent with Shadow Verification"
authors = [
    { name = "Kube AEGIS Sentient" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["kubernetes", "sre", "llm", "automation", "ai-ops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # Kubernetes & Operator
    "kopf>=1.37.2",
    "kubernetes>=32.0.1",

    # LLM & AI
    "langgraph>=0.4.8",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.40",
    "ollama>=0.6.1",

    # Async & HTTP
    "httpx>=0.28.1",
    "aiohttp>=3.11.14",

    # Data Validation
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",

    # Observability
    "prometheus-client>=0.21.1",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "structlog>=25.1.0",

    # Utilities
    "tenacity>=9.0.0",
    "jinja2>=3.1.5",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",

    # Security
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.4.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ruff>=0.9.7",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pre-commit>=4.1.0",
    "detect-secrets>=1.5.0",
    "ipython>=8.31.0",
    "ipdb>=0.13.13",
]

# Testing
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=5.1.0",
    "locust>=2.32.6",
    "faker>=33.3.1",
    "responses>=0.25.6",
]

# Documentation
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
]

# Security scanning
security = [
    "bandit[toml]>=1.8.2",
    "safety>=3.2.11",
]

# Type stubs
types = [
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.12",
]

# Jupyter notebooks
notebooks = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "ipywidgets>=8.1.5",
]

# All dev tools
all = [
    "aegis[dev,test,docs,security,types,notebooks]",
]

[project.scripts]
aegis = "aegis.cli:main_cli"
aegis-operator = "aegis.operator.main:main"

[project.urls]
Homepage = "https://github.com/your-org/aegis"
Documentation = "https://aegis-sre.dev"
Repository = "https://github.com/your-org/aegis"
Issues = "https://github.com/your-org/aegis/issues"

# ============================================================================
# BUILD SYSTEM (uv)
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

# ============================================================================
# DEPENDENCY GROUPS (PEP 735)
# ============================================================================
[dependency-groups]
dev = [
    "aegis[all]",
]

# ============================================================================
# RUFF - Linting & Formatting
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "S101",    # Use of assert (ok in tests)
    "PLR0913", # Too many arguments
    "TRY003",  # Long exception messages
    "EM101",   # String literal in exception
    "EM102",   # f-string in exception
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
    "ARG",    # Allow unused function args in tests
    "PLR2004", # Magic values ok in tests
]
"scripts/**/*.py" = [
    "T201",   # Print allowed in scripts
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["aegis"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

# ============================================================================
# MYPY - Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
ignore_missing_imports = false

# Plugins
plugins = ["pydantic.mypy"]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "kopf.*",
    "locust.*",
    "ollama.*",
    "langgraph.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_core.*",
    "prometheus_client.*",
    "structlog.*",
    "typer.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ============================================================================
# PYTEST - Testing
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (require K8s)",
    "e2e: End-to-end tests (full scenarios)",
    "slow: Slow tests (skip by default)",
    "gpu: Tests requiring GPU",
    "cloud: Tests requiring cloud resources",
]

# Options
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--asyncio-mode=auto",
]

# Async
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Coverage
[tool.coverage.run]
source = ["src/aegis"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# BANDIT - Security Scanning
# ============================================================================
[tool.bandit]
exclude_dirs = [
    ".venv",
    "tests",
]
skips = [
    "B101",  # assert_used (ok in tests)
]

# ============================================================================
# DETECT-SECRETS
# ============================================================================
[tool.detect-secrets]
baseline = ".secrets.baseline"
exclude_files = "uv.lock|poetry.lock|.*\\.ipynb$"
filters_used = [
    { path = "detect_secrets.filters.allowlist.is_line_allowlisted" },
    { path = "detect_secrets.filters.common.is_ignored_due_to_verification_policies", min_level = 2 },
    { path = "detect_secrets.filters.heuristic.is_indirect_reference" },
    { path = "detect_secrets.filters.heuristic.is_likely_id_string" },
    { path = "detect_secrets.filters.heuristic.is_lock_file" },
    { path = "detect_secrets.filters.heuristic.is_not_alphanumeric_string" },
    { path = "detect_secrets.filters.heuristic.is_potential_uuid" },
    { path = "detect_secrets.filters.heuristic.is_prefixed_with_dollar_sign" },
    { path = "detect_secrets.filters.heuristic.is_sequential_string" },
    { path = "detect_secrets.filters.heuristic.is_swagger_file" },
    { path = "detect_secrets.filters.heuristic.is_templated_secret" },
]
